# LLM-Temperature-Optimisation

./: .gitignore  LICENSE  README.md  RESULTS.md  config.py  experiment.py  pyproject.toml  tempCodeRunnerFile.py
TempEval/datasets/: __init__.py
TempEval/metrics/: _metrics.py
TempEval/models/: __init__.py  _llama.py
TempEval/tests/: test_metrics.py
TempEval/utils/: __init__.py  _file_handler.py  _github_export.py  _output_validation.py  _validate_output.py
dataset/: movie_corpus.py
llm_temp_optimisation/datasets/: __init__.py  _ai4privacy.py  _movie_corpus.py
llm_temp_optimisation/models/: _llama.py
llm_temp_optimisation/utils/: __init__.py  _github_export.py  _results.py
model/: llama_3.1.py
results/: config.xlsx  median_summary.csv  median_summary.xlsx  summary.csv  summary.xlsx  temperature_iterations_summary.csv  temperature_iterations_summary.xlsx  user study.ipynb  user_study_results.xlsx
results/temperature_0.001/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.1/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.2/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.3/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.4/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.5/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.6/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.7/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.8/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_0.9/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
results/temperature_1.0/: iter_1.xlsx  iter_2.xlsx  iter_3.xlsx  iter_4.xlsx  iter_5.xlsx
src/: Experiment.py  FileHandler.py  LLMModel.py  config.py  experiment.py  main.py  metrics.py  metrics_oop.py  tempCodeRunnerFile.py  test_metric.py  tests.py  writing_to_excel.py
temp_eval/datasets/: __init__.py  _ai4privacy.py
temp_eval/metrics/: __init__.py  _metrics.py
temp_eval/models/: __init__.py  _llama.py
temp_eval/tests/: test_metrics.py  test_sanitisation.py
temp_eval/utils/: __init__.py  _csv_export.py  _file_handler.py  _github_export.py  _output_validation.py  _visualisation.py  _visualization.py  test_sanitisation.py
