# pyproject.toml
# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# for more information about the pyproject.toml file.

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_temp_optimisation"
dynamic = ["version"]
description = """Scripts for modelling anonymisation accuracy and context preservation
with LLamma LLM based on the temperature parameter"""
readme = "README.md"
requires-python = ">=3.9"
keywords = ["machine learning", "python"]
license = { text = "MIT License" }
authors = [
    {name = "KD-7"},
]

dependencies = [
    'scikit-learn==1.6.1',
    'ollama==0.4.7',
    'pandas==2.2.3',
    'tabulate==0.9.0',
    'pygithub == 2.6.1',
    'datasets >= 3.3.2',
    'tqdm >= 4.67.1',
    'rogue-score == 0.1.2'
]
[tool.setuptools.packages.find]
include = ["tempeval*"]
exclude = ["tempeval.tests*"]  # exclude tests from build artifacts