# pyproject.toml
# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# for more information about the pyproject.toml file.

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "temp_eval"
dynamic = ["version"]
description = """Scripts for modelling anonymisation accuracy and context preservation
with LLamma LLM based on the temperature parameter"""
readme = "README.md"
requires-python = ">=3.9"
keywords = ["machine learning", "python"]
license = { text = "MIT License" }
authors = [
    {name = "KD-7"},
]

dependencies = [
    'ollama==0.4.7',
    'pandas==2.2.3',
    'pygithub == 2.6.1',
    'datasets >= 3.3.2',
    'tqdm >= 4.67.1',
    # Cant install in pyproject.toml, see GitHub issue: https://github.com/google-research/google-research/issues/2672
    # Instead see README for workaround
    #'rogue-score == 0.1.2'
]
[tool.setuptools.dynamic]
version = {attr = "temp_eval.__version__"}

# Install the optional dependencies with temp_eval[OPTIONAL_DEPENDENCY_NAME]
# e.g. temp_eval[tests]
[project.optional-dependencies]
tests = ["pytest"]


[tool.setuptools.packages.find]
include = ["temp_eval*"]
exclude = ["temp_eval.tests*"]  # exclude tests from build artifacts